--- a/index.html
+++ b/index.html
@@ -24,12 +24,45 @@
         <button class="btn btn-link btn-block m-0">Link 3</button>
       </div>
     </div>
-    <!-- <h1 class="text-center">This is a Trip</h1> -->
-    <div class="container-fluid py-5">
-      <h1 class="display-5 fw-bold text-center">This is a Trip </h1>
-      <p class="col-md-8 fs-4 text text-center">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples.</p>
-      <button class="btn btn-primary btn-lg d-grid mx-auto" type="button"> button</button>
+    <div class="bgimg-1">
+      <div class="caption">
+      <span class="border">SCROLL DOWN</span>
+      </div>
     </div>
+    <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+      <h3 style="text-align:center;">Parallax Demo</h3>
+      <p>Parallax scrolling is a web site trend where the background content is moved at a different speed than the foreground content while scrolling. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed posuere mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit dignissim. Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam pede, nullam vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum at, sodales tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate at quibusdam sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis ornare. Suscipit proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor placerat leo.</p>
+    </div>
+    <div class="bgimg-2">
+      <div class="caption">
+      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">LESS HEIGHT</span>
+      </div>
+    </div>
+    <div style="position:relative;">
+      <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+      <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+      </div>
+    </div>
+    <div class="bgimg-3">
+      <div class="caption">
+      <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SCROLL UP</span>
+      </div>
+    </div>
+    <div style="position:relative;">
+      <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+      <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+      </div>
+    </div>
+    <div class="bgimg-1">
+      <div class="caption">
+      <span class="border">COOL!</span>
+      </div>
+    </div>
+    <!-- <h1 class="text-center">This is a Trip</h1> -->
+    <!-- <div class="container-fluid py-5">
+      <h1 class="display-5 fw-bold text-center">This is a Trip </h1>
+      <button class="btn btn-primary btn-lg d-grid mx-auto" type="button"> button</button>
+    </div> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Lobster&display=swap" rel="stylesheet">
